--- a/react-frontend/src/Components/Home/Home.css
+++ b/react-frontend/src/Components/Home/Home.css
@@ -1,7 +1,8 @@
 .Home {
-  width: 60vw;
+  width: 80vw;
   min-height: 100vh;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-left: auto;
   margin-right: auto;
+  /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
 }
