--- a/react-frontend/src/Components/Home/Home.css
+++ b/react-frontend/src/Components/Home/Home.css
@@ -4,5 +4,6 @@
   /* border: 1px solid black; */
   margin-left: auto;
   margin-right: auto;
+  position: relative;
   /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
 }
