--- a/react-frontend/src/Components/UserDetail/UserNav.css
+++ b/react-frontend/src/Components/UserDetail/UserNav.css
@@ -1,10 +1,25 @@
 .UserNav {
   display: flex;
   /* border: 1px solid; */
-  border-top: 1px solid lightgray;
-  border-bottom: 1px solid lightgray;
+  /* border-top: 1px solid lightgray; */
+  /* border-bottom: 1px solid lightgray; */
   margin: 10px 0 20px 0;
   justify-content: space-around;
   font-size: 1.3rem;
-  padding: 10px;
+  background-color: white;
+  border-radius: 4px;
+}
+
+.UserNav .nav-links a {
+  color: black;
+  text-decoration: none;
+  /* border: 1px solid; */
+  height: 7vh;
+  display: flex;
+  align-items: center;
+}
+
+.UserNav .nav-links.active a {
+  color: blue;
+  border-bottom: 2.5px solid blue;
 }
