--- a/react-frontend/src/Components/MyPosts/MyPostForm.css
+++ b/react-frontend/src/Components/MyPosts/MyPostForm.css
@@ -19,6 +19,7 @@
   height: 100vh;
   width: 100%;
 } */
+.MyPostForm .error,
 .MyPostForm .form-container {
   width: 80%;
   border: 1px solid green;
@@ -26,6 +27,9 @@
   background-color: rgba(255, 255, 255, 1);
   border-radius: 5px;
   padding: 25px 30px 30px 30px;
+}
+.MyPostForm .error {
+  min-height: 20vh;
 }
 
 /* .MyPostForm .form-container:hover .MyPostForm:not(.form-container) {
