--- a/react-frontend/src/Components/UserDetail/UserPost.css
+++ b/react-frontend/src/Components/UserDetail/UserPost.css
@@ -1,22 +1,15 @@
-.UserPost .head {
-  display: flex;
-  align-items: center;
-  /* padding: 20px; */
-  padding-bottom: 10px;
+.UserPost .UserPostCard {
+  padding: 20px;
   border-bottom: 1px solid lightgray;
-}
-
-.UserPost .card {
-  border: 1px solid;
-  margin: 20px;
+  /* border: 1px solid red; */
+  margin: 10px 20px;
   background-color: white;
   border-radius: 4px;
-  padding: 20px;
 }
 
-.UserPost .profile-picture {
-  /* border: 1px solid; */
-  height: 3rem;
+.UserPost .UserPostCard .profile-picture {
+  border: 1px solid;
+  min-height: 3rem;
   min-width: 3rem;
   display: flex;
   align-items: center;
@@ -28,12 +21,12 @@
   margin-right: 30px;
 }
 
-.UserPost .name-container {
+.UserPost .UserPostCard .name-container {
   margin-right: 30px;
-  /* border: 1px solid; */
+  border: 1px solid;
   flex-basis: 100%;
 }
-.UserPost .name-container .name {
+.UserPost .UserPostCard .name-container .name {
   /* border: 1px solid; */
   font-size: 1.3rem;
 
@@ -41,56 +34,73 @@
   font-family: "Times New Roman", Times, serif;
 }
 
-.UserPost .username {
+.UserPost .UserPostCard .username {
   color: darkgray;
 }
 
-.UserPost .post-title {
-  border: 1px solid;
-  font-weight: bold;
-  font-family: cursive;
-}
-
-.UserPost .post-content {
-  margin-top: 1px;
-  border: 1px solid;
-  color: rgb(61, 61, 61);
-  font-family: Georgia, "Times New Roman", Times, serif;
-}
-
-.UserPost .post-content::first-line {
-  text-indent: 5%;
-}
-
-.UserPost .post-content-container {
-  margin-top: 10px;
-  /* border: 1px solid red; */
-  padding-bottom: 20px;
-  border-bottom: 1px solid darkgray;
-}
-
-.UserPost .card-footer {
+.UserPost .UserPostCard .head {
   display: flex;
-  justify-content: space-around;
-  padding: 20px 0 0 0;
+  border: 1px solid;
+}
 
+.UserPost .UserPostCard .option-btn {
   /* border: 1px solid; */
+  font-size: 1.2rem;
+  font-weight: bold;
+  display: flex;
+  color: rgb(126, 126, 126);
+  align-items: center;
+  position: relative;
+}
+
+.UserPost .UserPostCard .hamburger-menu {
+  position: absolute;
+  top: 100%;
+  /* border: 1px solid; */
+  right: 100%;
+  background-color: white;
+  color: black;
+  font-size: 0.9rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-weight: 500;
+  width: 20vw;
+  border-radius: 4px;
+  box-shadow: 0.3px 0.3px 4px darkgray, -0.3px -0.3px 4px darkgray;
+}
+
+.UserPost .UserPostCard .menu-btn {
+  /* border: 1px solid; */
+  /* padding: 10px; */
+  /* height: 5vh; */
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.UserPost .UserPostCard .menu-btn .icon {
+  border: 1px solid;
+  min-width: 40px;
   font-size: 1.4rem;
+  /* text-align: center; */
 }
 
-.UserPost .card-footer div {
-  cursor: pointer;
-}
-.UserPost .card-footer div:hover {
-  transform: scale(1.1);
+.UserPost .UserPostCard .menu-btn .label {
+  border: 1px solid red;
 }
 
-.UserPost .options-icon {
-  /* border: 1px solid; */
-  /* font-size: 1rem; */
-  transform: scale(1.3);
-  padding: 5px;
-  color: darkgray;
+.UserPost .UserPostCard .option-btn .btn {
+  border: 1px solid;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.UserPost .UserPostCard .option-btn .btn:hover {
+  background-color: darkgray;
   cursor: pointer;
-  z-index: 1;
+  border-radius: 4px;
+}
+
+.UserPost .UserPostCard .menu-btn:hover {
+  background-color: lightgray;
+  cursor: pointer;
 }
