--- a/react-frontend/src/Components/UserDetail/UserPost.css
+++ b/react-frontend/src/Components/UserDetail/UserPost.css
@@ -132,14 +132,36 @@
 .UserPost .card-footer {
   display: flex;
   justify-content: space-around;
-  padding: 20px 0 0 0;
-
-  /* border: 1px solid; */
+  /* border: 1px solid red; */
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
   font-size: 1.3rem;
+  /* margin: 10px 0; */
+  height: 7vh;
+  align-items: center;
+  /* margin-bottom: 10px; */
 }
 
-.UserPost .card-footer div:hover {
+.UserPost .card-footer .comment-icon:hover,
+.UserPost .like-icon:hover,
+.UserPost .share-icon:hover {
   transform: scale(1.1);
   cursor: pointer;
-  color: blue;
+  /* color: blue; */
+}
+
+.UserPost .UserPostCard .comment-list {
+  border: 1px solid lightgray;
+  max-height: 60vh;
+  overflow: auto;
+  border-radius: 4px;
+  margin: 15px 0;
+  /* box-shadow: 0.3px 0.3px 4px darkgray, -0.3px -0.3px 4px darkgray; */
+}
+
+.UserPost .UserPostCard .no-like {
+  height: 5vh;
+  border: 1px solid;
+  display: flex;
+  align-items: center;
 }
