--- a/react-frontend/src/Components/MyPosts/MyPostCreate.css
+++ b/react-frontend/src/Components/MyPosts/MyPostCreate.css
@@ -19,6 +19,11 @@
   /* border: 1px solid; */
   margin-right: 10px;
   background-color: rgb(255, 230, 233);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.4rem;
+  font-weight: 450;
 }
 
 .MyPostCreate .show-form-btn {
