--- a/react-frontend/src/Components/CommentCard/CommentCard.css
+++ b/react-frontend/src/Components/CommentCard/CommentCard.css
@@ -1,27 +1,46 @@
 .CommentCard {
   /* border: 1px solid; */
   display: flex;
-  padding: 5px;
+  /* padding: 5px; */
+  margin: 5px 0px;
+  /* position: relative; */
 }
 
 .CommentCard .profile-picture {
   height: 2.3rem;
   min-width: 2.3rem;
-  border: 1px solid;
+  /* border: 1px solid; */
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
   margin-right: 10px;
+  background-color: rgb(255, 230, 233);
 }
 
 .CommentCard .comment-container {
-  border: 1px solid;
   border-radius: 8px;
   padding: 8px;
+  /* border: 1px solid red; */
   background-color: rgb(243, 243, 243);
+  /* width: fit-content; */
+  /* height: auto; */
+  /* width: fit-content; */
 }
 
-.CommentCard .name {
-  font-weight: 450;
+.CommentCard .name a {
+  font-weight: 380;
+  text-decoration: none;
+  font-size: 1rem;
+  display: block;
+  color: black;
+}
+
+.CommentCard .name a:hover {
+  text-decoration: underline;
+}
+
+.CommentCard .comment {
+  font-size: 1rem;
+  color: rgb(46, 46, 46);
 }
