--- a/react-frontend/src/Components/UserDetail/UserPost.css
+++ b/react-frontend/src/Components/UserDetail/UserPost.css
@@ -8,22 +8,24 @@
 }
 
 .UserPost .UserPostCard .head .profile-picture {
-  border: 1px solid;
-  min-height: 3rem;
-  min-width: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 50%;
-  background-color: lightpink;
-  font-size: 1.5rem;
-
-  margin-right: 30px;
+  height: 50px;
+  max-height: 50px;
+  min-width: 50px;
+  max-width: 50px;
+  /* border: 1px solid; */
+  margin-right: 10px;
+  background-color: rgb(255, 230, 233);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.4rem;
+  font-weight: 450;
 }
 
 .UserPost .UserPostCard .head .name-container {
   margin-right: 30px;
-  border: 1px solid;
+  /* border: 1px solid; */
   flex-basis: 100%;
 }
 .UserPost .UserPostCard .head .name-container .name {
@@ -40,7 +42,9 @@
 
 .UserPost .UserPostCard .head {
   display: flex;
-  border: 1px solid;
+  /* border: 1px solid; */
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .UserPost .UserPostCard .head .option-btn {
@@ -77,18 +81,18 @@
   padding: 8px;
 }
 .UserPost .UserPostCard .head .menu-btn .icon {
-  border: 1px solid;
+  /* border: 1px solid; */
   min-width: 40px;
   font-size: 1.4rem;
   /* text-align: center; */
 }
 
 .UserPost .UserPostCard .head .menu-btn .label {
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .UserPost .UserPostCard .head .option-btn .btn {
-  border: 1px solid;
+  /* border: 1px solid; */
   height: 100%;
   display: flex;
   align-items: center;
@@ -106,27 +110,28 @@
 }
 
 .UserPost .post-title {
-  border: 1px solid;
+  /* border: 1px solid green; */
   font-weight: bold;
   font-family: cursive;
 }
 
 .UserPost .post-content {
   margin-top: 1px;
-  border: 1px solid;
-  color: rgb(61, 61, 61);
+  /* border: 1px solid; */
+  /* color: rgb(61, 61, 61); */
+  color: black;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .UserPost .post-content::first-line {
-  text-indent: 5%;
+  text-indent: 2%;
 }
 
 .UserPost .post-content-container {
   margin-top: 10px;
   /* border: 1px solid red; */
   padding-bottom: 20px;
-  border-bottom: 1px solid darkgray;
+  border-bottom: 1px solid lightgray;
 }
 
 .UserPost .card-footer {
@@ -151,17 +156,32 @@
 }
 
 .UserPost .UserPostCard .comment-list {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   max-height: 60vh;
   overflow: auto;
   border-radius: 4px;
-  margin: 15px 0;
+  /* margin: 15px 0; */
+  padding: 10px;
   /* box-shadow: 0.3px 0.3px 4px darkgray, -0.3px -0.3px 4px darkgray; */
 }
 
 .UserPost .UserPostCard .no-like {
-  height: 5vh;
-  border: 1px solid;
-  display: flex;
-  align-items: center;
+  padding: 10px;
+  /* border: 1px solid; */
+  width: fit-content;
+  /* color: blue; */
+  color: rgb(56, 56, 56);
+}
+
+.UserPost .UserPostCard .no-like:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.UserPost .no-comment {
+  /* border: 1px solid; */
+  /* margin: 5px 0; */
+  /* padding: 10px 0; */
+  /* margin-bottom: 10px; */
+  color: rgb(56, 56, 56);
 }
