--- a/react-frontend/src/Components/UserDetail/UserPost.css
+++ b/react-frontend/src/Components/UserDetail/UserPost.css
@@ -9,7 +9,7 @@
 
 .UserPost .UserPostCard .head .profile-picture {
   border-radius: 50%;
-  height: 50px;
+  min-height: 50px;
   max-height: 50px;
   min-width: 50px;
   max-width: 50px;
