--- a/react-frontend/src/Components/CommentCard/CommentCard.css
+++ b/react-frontend/src/Components/CommentCard/CommentCard.css
@@ -4,6 +4,7 @@
   /* padding: 5px; */
   margin: 5px 0px;
   /* position: relative; */
+  /* align-items: center; */
 }
 
 .CommentCard .profile-picture {
@@ -43,4 +44,59 @@
 .CommentCard .comment {
   font-size: 1rem;
   color: rgb(46, 46, 46);
+}
+
+.CommentCard .name-container {
+  display: flex;
+  border: 1px solid;
+}
+
+.CommentCard {
+  border: 1px solid;
+}
+
+.CommentCard .option-icon {
+  /* border: 1px solid; */
+  margin: 0 10px;
+  /* display: flex; */
+  /* align-items: center; */
+  /* background-color: rgb(243, 243, 243); */
+  height: 30px;
+  padding: 5px 3px;
+  border-radius: 3px;
+  position: relative;
+  z-index: 1;
+}
+
+.CommentCard .comment-menu {
+  position: absolute;
+  /* border: 1px solid; */
+  left: 100%;
+  top: 100%;
+
+  box-shadow: 0.3px 0.3px 4px darkgray, -0.3px -0.3px 4px darkgray;
+  background-color: white;
+  border-radius: 4px;
+}
+
+.CommentCard .comment-btn {
+  padding: 5px 10px;
+}
+.CommentCard .comment-btn:hover {
+  background-color: lightgray;
+  cursor: pointer;
+}
+
+.CommentCard .option-icon {
+  display: flex;
+  align-items: center;
+
+  /* font-size: 1rem; */
+}
+
+.CommentCard .option-icon .btn {
+  cursor: pointer;
+  padding: 7px;
+  color: rgb(92, 92, 92);
+  border-radius: 4px;
 }
