--- a/react-frontend/src/Components/Navigation/Navigation.css
+++ b/react-frontend/src/Components/Navigation/Navigation.css
@@ -1,58 +1,116 @@
 .Navigation {
   display: flex;
-  justify-content: space-around;
-  background-color: blue;
-  position: relative;
+  /* border: 1px solid; */
+  border-radius: 0 0 4px 4px;
+  height: 7vh;
+  background-color: white;
+  width: 100%;
+
+  box-shadow: 0.3px 0.3px 5px lightgray;
 }
 
-.Navigation .nav-links {
-  flex-basis: 25%;
-}
-.Navigation .nav-links a {
-  color: white;
-  text-decoration: none;
+.Navigation .SearchBar {
+  /* border: 1px solid blue; */
+  width: 68%;
+  padding: 10px;
   display: flex;
   align-items: center;
-  height: 7vh;
+}
 
-  justify-content: center;
+.Navigation .SearchBar form {
+  width: 100%;
+}
+.Navigation .SearchBar input {
+  width: 100%;
+  display: block;
+  border-radius: 4px;
+  border: 1px solid darkgray;
+  padding: 4px;
+  padding-left: 10px;
+  font-size: 1rem;
 }
 
 .Navigation .nav-links.active a {
-  background-color: black;
+  color: blue;
+  /* background-color: lightgray; */
 }
-
-/* ******* */
-
-.Navigation .content {
-  display: none;
-  position: absolute;
-  top: 7vh;
-  right: 0;
-  width: 25%;
-  box-shadow: 1px 1px 5px black;
-  border-radius: 4px;
-  background-color: white;
-}
-
-.Navigation .drop-btn {
-  cursor: pointer;
-  width: 25%;
-  border: 1px solid;
+.Navigation .drop-btn,
+.Navigation .nav-links a {
+  min-width: 40px;
+  /* max-width: 7vh; */
+  display: block;
+  height: 100%;
+  /* border: 1px solid green; */
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%;
+  color: darkgray;
+  cursor: pointer;
 }
 
-.Navigation .drop-btn.drop-btn-active {
-  background-color: lightgray;
+.Navigation .left-nav {
+  display: flex;
+  justify-content: space-evenly;
+  width: 32%;
+  /* border: 1px solid rgb(220, 246, 255); */
 }
 
-.Navigation .close-icon {
-  font-size: 2rem;
-  color: red;
+.Home {
+  position: relative;
+}
+.Home .Hamburger {
+  position: absolute;
+  top: 7.3vh;
+  right: 20px;
+  box-shadow: 0.3px 0.3px 5px darkgray, -0.3px -0.3px 5px darkgray;
+  /* border: 1px solid yellow; */
+  width: fit-content;
+  background-color: white;
+  border-radius: 4px;
+  padding: 10px;
 }
 
-.Navigation .drop-btn.drop-btn-active + .content {
+.Hamburger .box-1 a {
+  display: flex;
+  /* border: 1px solid; */
+  align-items: center;
+}
+
+.Hamburger .nav-link-container {
+  /* border: 1px solid red; */
+  line-height: 100%;
+}
+
+.Hamburger .nav-link-container .nav-link-desc {
+  font-size: 0.8rem;
+  color: darkgray;
+}
+.Hamburger .profile-picture {
+  width: 2rem;
+  height: 2rem;
+  /* border: 1px solid; */
+  margin-right: 5px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 228, 233);
+}
+
+.Hamburger .box a {
+  /* border: 1px solid; */
+  padding: 5px;
+  margin-bottom: 6px;
+  border-radius: 4px;
+  color: rgb(32, 32, 32);
+  text-decoration: none;
+}
+
+.Hamburger .box a:hover {
+  background-color: rgb(224, 224, 224);
+}
+
+.Hamburger .box-2 a {
   display: block;
 }
