--- a/react-frontend/src/Components/UserDetail/UserAbout.css
+++ b/react-frontend/src/Components/UserDetail/UserAbout.css
@@ -1,54 +1,123 @@
 .UserAbout {
-  border: 1px solid;
   background-color: white;
-  margin: 0 10px;
+  margin: 0 20px;
   border-radius: 4px;
   padding: 20px;
-  line-height: 150%;
-  font-size: 1.3rem;
-  font-weight: 430;
-}
-
-.UserAbout label {
-  color: rgb(53, 53, 53);
-  border: 1px solid green;
-  margin-right: 10px;
-  /* margin-bottom: 10px; */
 }
 
 .UserAbout .form-group {
+  /* border: 1px solid; */
   display: flex;
-  border: 1px solid;
-  align-items: center;
-  margin-bottom: 10px;
+  font-size: 1rem;
+  /* align-items: center; */
+  margin-bottom: 15px;
+
+  position: relative;
 }
 
-/* .UserAbout .profile-values {
-  border: 1px solid black;
-} */
+.UserAbout label {
+  /* border: 1px solid; */
+  background-color: rgb(226, 226, 226);
+  padding: 3px 10px;
+  margin-right: 10px;
+  display: block;
+  border-radius: 4px;
+  flex-basis: 30%;
+
+  box-shadow: 0.3px 0.3px 5px darkgray, -0.3px -0.3px 5px darkgray;
+  /* position: relative; */
+}
 
 .UserAbout .container {
-  border: 1px solid red;
+  flex-basis: 65%;
+  display: flex;
+  position: relative;
+}
+
+.UserAbout .profile-values {
+  display: flex;
+  align-items: flex-start;
+  width: fit-content;
+  padding: 3px 10px;
+  /* border: 1px solid; */
+  background-color: rgb(226, 226, 226);
+  border-radius: 4px;
+  box-shadow: 0.3px 0.3px 5px darkgray, -0.3px -0.3px 5px darkgray;
+  flex-basis: 100%;
+  /* height: 30vh; */
+  word-wrap: break-word;
+  word-break: break-all;
+
+  /* position: relative; */
+}
+
+.UserAbout input {
+  width: 100%;
+  padding: 3px 10px;
+  font-size: 1rem;
+  border-radius: 4px;
+  outline: none;
+  display: block;
+}
+
+.UserAbout select {
+  width: 95%;
+  padding: 3px 10px;
+  font-size: 1rem;
+  border-radius: 4px;
+  outline: none;
 }
 
 .UserAbout .edit-icon,
 .UserAbout .save-icon {
-  border: 1px solid blue;
-  margin: 0 10px;
-  padding: 2px;
   cursor: pointer;
-  font-size: 1rem;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-basis: 5%;
+
+  /* border: 1px solid; */
 }
 
-.UserAbout .edit-icon {
-  color: rgb(122, 122, 252);
+.UserAbout .bio-container {
+  /* position: absolute; */
+  /* border: 1px solid red; */
+  width: 100%;
+  min-height: 10vh;
 }
 
-.UserAbout .save-icon {
-  color: rgb(255, 72, 72);
+.UserAbout textarea {
+  min-height: 20vh;
+  height: 100%;
+  /* position: absolute; */
+  resize: vertical;
+  width: 100%;
+  border-radius: 4px;
 }
 
-.UserAbout .edit-icon:hover,
-.save-icon:hover {
-  transform: scale(1.1);
+.UserAbout .input-tooltip {
+  position: absolute;
+  bottom: 120%;
+  background-color: white;
+  padding: 10px;
+  border-radius: 8px;
+
+  box-shadow: 0.5px 0.5px 5px darkgray, -0.5px -0.5px 5px darkgray;
+  /* border: 1px solid; */
+  /* width: 100%; */
+}
+
+.UserAbout .empty_name {
+  position: absolute;
+  /* bottom: 120%; */
+  top: -100%;
+  left: 50%;
+  /* right: 50%/; */
+  /* bottom: 100%; */
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 10px;
+  border-radius: 8px;
+
+  box-shadow: 0.5px 0.5px 5px darkgray, -0.5px -0.5px 5px darkgray;
 }
