--- a/react-frontend/src/Components/Chat/Chat.css
+++ b/react-frontend/src/Components/Chat/Chat.css
@@ -1,10 +1,13 @@
 .Chat {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   position: relative;
 }
 
 .Chat form {
-  border: 1px solid;
+  /* border: 1px solid; */
+  box-shadow: 0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray,
+    0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray;
+
   position: fixed;
   bottom: 0;
   left: 0;
@@ -23,16 +26,19 @@
   margin: 0 5px 0 10px;
   padding: 5px 10px;
   border-radius: 4px;
+  background-color: green;
+  border: none;
+  color: white;
 }
 
 .Chat .form-group .send-btn {
-  border: 1px solid;
+  /* border: 1px solid; */
   position: absolute;
   right: 0;
   /* top: 0; */
   width: 15%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -46,19 +52,31 @@
   padding: 5px 20px;
   top: 50%;
   transform: translateY(-50%);
+  border: 2px solid black;
+  border-radius: 4px;
+  outline: none;
+}
+
+.Chat .form-group input:focus {
+  border: 1px solid blue;
+  box-shadow: 0.01px 0.01px 4px blue;
+  /* outline: 1px solid blue; */
+  outline: none;
 }
 
 /* for head flex */
 .Chat .head-top {
   display: flex;
-  border: 1px solid;
+  /* border: 1px solid; */
   background-color: white;
   height: 7vh;
   align-items: center;
+  box-shadow: 0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray,
+    0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray;
 }
 
 .Chat .profile-picture {
-  border: 1px solid;
+  /* border: 1px solid; */
   width: 6vh;
   height: 6vh;
   border-radius: 50%;
