--- a/react-frontend/src/Components/UserDetail/UserFriend.css
+++ b/react-frontend/src/Components/UserDetail/UserFriend.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   padding: 20px;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid darkgray;
   /* background-color: white; */
   /* border-bottom: 1px solid lightgray; */
   /* border: 1px solid; */
@@ -27,8 +27,10 @@
   background-color: white;
   border-radius: 5px;
   /* min-height: 83vh; */
-  border: 1px solid lightgray;
+  /* border: 1px solid lightgray; */
   padding: 20px;
+  box-shadow: 0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray,
+    0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray;
 }
 .UserFriend .profile-picture {
   /* border: 1px solid; */
@@ -48,8 +50,14 @@
 
 .UserFriend .name-container {
   margin-right: 30px;
-  border: 1px solid;
+  /* border: 1px solid; */
   flex-basis: 100%;
+}
+
+.UserFriend .name-container a {
+  /* border: 1px solid; */
+  display: block;
+  width: fit-content;
 }
 .UserFriend .name-container .name {
   /* border: 1px solid; */
