--- a/react-frontend/src/Components/UserDetail/UserNav.css
+++ b/react-frontend/src/Components/UserDetail/UserNav.css
@@ -1,6 +1,6 @@
 .UserNav {
   display: flex;
-  /* border: 1px solid; */
+  /* border: 1px solid red; */
   /* border-top: 1px solid lightgray; */
   /* border-bottom: 1px solid lightgray; */
   margin: 0px 0 10px 0;
