--- a/react-frontend/src/Components/CommentCard/CommentCard.css
+++ b/react-frontend/src/Components/CommentCard/CommentCard.css
@@ -34,7 +34,7 @@
   text-decoration: none;
   font-size: 1rem;
   display: block;
-  color: black;
+  /* color: black; */
 }
 
 .CommentCard .name a:hover {
