--- a/react-frontend/src/Components/Home/Home.css
+++ b/react-frontend/src/Components/Home/Home.css
@@ -7,3 +7,23 @@
   position: relative;
   /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
 }
+
+.Home .odin-book {
+  /* border: 1px solid; */
+  min-height: 7vh;
+  max-height: 7vh;
+  display: flex;
+  align-items: center;
+  font-size: 2.5rem;
+  font-weight: bolder;
+  font-family: cursive;
+  background-image: linear-gradient(
+    to top,
+    #0c3483 0%,
+    #a2b6df 100%,
+    #6b8cce 100%,
+    #a2b6df 100%
+  );
+  color: white;
+  padding: 10px 30px;
+}
