--- a/react-frontend/src/Components/Signup/Signup.css
+++ b/react-frontend/src/Components/Signup/Signup.css
@@ -1,11 +1,11 @@
-.Login {
-  /* border: 1px solid; */
+.Signup {
+  border: 1px solid;
   height: 93vh;
   position: relative;
   background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 }
 
-.Login form {
+.Signup form {
   top: 10%;
   position: absolute;
   left: 50%;
@@ -19,34 +19,34 @@
     0.3px 0.3px 15px white, -0.3px -0.3px 15px white;
 }
 
-.Login .head {
+.Signup .head {
   font-size: 2rem;
   font-weight: bold;
 }
 
-.Login form input {
+.Signup form input {
   font-size: 1rem;
   padding: 4px 10px;
   border: 1px solid black;
   border-radius: 4px;
 }
-.Login form input:focus {
+.Signup form input:focus {
   box-shadow: 0.3px 0.3px 4px blue;
   border: 1px solid blue;
   outline: none;
 }
 
-.Login .form-group {
+.Signup .form-group {
   margin: 10px 0;
 }
 
-.Login .form-group label {
+.Signup .form-group label {
   font-size: 1.2rem;
   font-weight: bold;
 }
 
-.Login .login-btn button,
-.Login .signup-btn button {
+.Signup .signup-btn button,
+.Signup .login-btn button {
   border: none;
   color: white;
   font-size: 1.3rem;
@@ -57,24 +57,24 @@
   margin-right: 5px;
 }
 
-.Login .login-btn button {
+.Signup .login-btn button {
   background-color: blue;
 }
 
-.Login .signup-btn button {
+.Signup .signup-btn button {
   background-color: green;
 }
 
-.Login .login-btn button:hover {
+.Signup .login-btn button:hover {
   transform: scale(1.01);
   background-color: darkblue;
 }
 
-.Login .signup-btn button:hover {
+.Signup .signup-btn button:hover {
   transform: scale(1.01);
   background-color: darkgreen;
 }
 
-.Login .buttons {
+.Signup .buttons {
   display: flex;
 }
