--- a/react-frontend/src/Components/UserDetail/UserLikes.css
+++ b/react-frontend/src/Components/UserDetail/UserLikes.css
@@ -17,20 +17,78 @@
   background-color: white;
   height: 60vh;
   padding: 20px;
-  border: 1px solid greenyellow;
+  overflow-y: auto;
+  /* border: 1px solid greenyellow; */
+  border-radius: 4px;
 }
 
 .UserLikes .box .form-close-btn {
   display: flex;
   justify-content: flex-end;
   /* margin: 20px; */
-  border: 1px solid red;
+  /* border: 1px solid red; */
   font-size: 1.8rem;
-  border-bottom: 2px solid darkgray;
+  border-bottom: 1px solid darkgray;
   padding-bottom: 10px;
+  /* margin-right: 0; */
 }
 
 .UserLikesCard {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   /* background-color: red; */
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+  padding: 5px;
+  border-radius: 4px;
+  /* background-color: rgb(240, 240, 240); */
+
+  box-shadow: 0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray,
+    0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray;
+}
+
+.UserLikes .box .form-close-btn button {
+  cursor: pointer;
+  background-color: white;
+  /* color: white; */
+  border: none;
+}
+
+.UserLikes .UserLikesCard .profile-picture {
+  border-radius: 50%;
+  /* border: 1px solid; */
+  min-width: 30px;
+  max-width: 30px;
+  min-height: 30px;
+  max-height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 20px 0 10px;
+  font-size: 18px;
+  background-color: rgb(224, 248, 255);
+}
+
+.UserLikes .UserLikesCard .name {
+  flex-basis: 100%;
+  /* border: 1px solid; */
+}
+
+.UserLikes .UserLikesCard .add-btn-container {
+  background-color: darkgray;
+  min-width: 30px;
+  max-width: 30px;
+  min-height: 30px;
+  max-height: 30px;
+  border-radius: 50%;
+  margin: 0 0px 0 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid; */
+}
+
+.UserLikes .UserLikesCard .add-btn {
+  font-size: 15px;
+  cursor: pointer;
 }
