--- a/react-frontend/src/Components/UserDetail/UserFriend.css
+++ b/react-frontend/src/Components/UserDetail/UserFriend.css
@@ -29,7 +29,7 @@
   /* min-height: 89vh; */
   background-color: white;
   border-radius: 5px;
-  min-height: 91vh;
+  /* min-height: 91vh; */
   /* border: 1px solid blue; */
   padding: 20px;
   box-shadow: 0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray,
@@ -37,10 +37,10 @@
 }
 .UserFriend .profile-picture {
   /* border: 1px solid; */
-  max-height: 3.3rem;
-  min-height: 3.3rem;
-  min-width: 3.3rem;
-  max-width: 3.3rem;
+  max-height: 50px;
+  min-height: 50px;
+  min-width: 50px;
+  max-width: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -65,13 +65,13 @@
 .UserFriend .name-container .name {
   /* border: 1px solid; */
   font-size: 1.3rem;
-
   font-weight: 430;
   font-family: "Times New Roman", Times, serif;
 }
 
 .UserFriend .username {
-  color: darkgray;
+  color: rgb(78, 78, 78);
+  font-size: 1rem;
 }
 
 .UserFriend .add-btn,
@@ -102,7 +102,8 @@
 .UserFriend.myaccount {
   /* border: 1px solid green; */
   margin-top: 0;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
+  height: fit-content;
 }
 
 .UserFriend .empty-friends {
