--- a/react-frontend/src/Components/Search/SearchResult.css
+++ b/react-frontend/src/Components/Search/SearchResult.css
@@ -62,6 +62,11 @@
   display: block;
   width: fit-content;
   text-decoration: none;
+  color: black;
+}
+
+.SearchResult .name-container a:hover {
+  text-decoration: underline;
 }
 
 .SearchResult .username {
